done some projects and contacts
90% done

--- a/index.html
+++ b/index.html
@@ -170,81 +170,61 @@
             </div>
         </div>
     </div>
-    <div id="latest-works">
-        <div id="latest-works-title">latest works</div>
-        <div id="latest-works-description">The latest Projects I have worked on.</div>
-        <div id="latest-works-collection">
-            <div class="work-large">
-                <div class="work-image">
-                    <img src="/src/images/photo.avif" alt="image of project x">
+    <div id="latest-projects">
+        <div id="latest-projects-title">latest projects</div>
+        <div id="latest-projects-description">The latest Projects I have worked on.</div>
+        <div id="latest-projects-collection">
+            <div class="project-large">
+                <a class="project-image" href="https://github.com/9EED/superbox-3.5" target="_blank">
+                    <img src="/src/images/projects/superbox 3.5.png" alt="image of a sky island in superbox-3.5">
+                </a>
+                <div class="project-title">superbox 3.5</div>
+                <div class="project-description">
+                    &nbsp; This is a fully functional pixelsim game I made completly from scratch in Python and raylib. It is the third iteration of the superbox series. The game is essentially a sandbox where you can create and destroy pixels of deffirent materials that interact with each other, in many ways such as burning, melting, freezing, exploding. the 3.5 version of the game is the first to feature a UI and a save system in addition to an "endless" world.
+                    <a href="https://github.com/9EED/superbox-3.5" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
-                <div class="work-title">title goes here</div>
-                <div class="work-description">
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes.
+                <div class="date">Oct-Nov 2022</div>
+            </div>
+            <div class="project-large">
+                <a class="project-image" href="https://9eed.github.io/particle-life-js/" target="_blank">
+                    <img src="/src/images/projects/particle life.png" alt="image of project x">
+                </a>
+                <div class="project-title">practice life</div>
+                <div class="project-description">
+                    &nbsp; This is a particle simulation I completly from scratch in JavaScript. It is a simulation of a simple ruleset between coloured particles that allow complex patterns to emerge in life like fashion. The simulation settings are tuneable through a UI made with HTML and CSS.
+                    <a href="https://9eed.github.io/particle-life-js/" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                </div>
+                <div class="date">Jan-Mar 2023</div>
+            </div>
+            <div class="project-small">
+                <a class="project-image" href="#" target="_blank">
+                    <img src="/src/images/photo.avif" alt="image of project x">
+                </a>
+                <div class="project-title">title goes here</div>
+                <div class="project-description">
+                    
                     <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">69 dec 2023</div>
             </div>
-            <div class="work-large">
-                <div class="work-image">
+            <div class="project-small">
+                <a class="project-image" href="#" target="_blank">
                     <img src="/src/images/photo.avif" alt="image of project x">
-                </div>
-                <div class="work-title">title goes here</div>
-                <div class="work-description">
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes here,
-                    work description goes.
+                </a>
+                <div class="project-title">title goes here</div>
+                <div class="project-description">
+
                     <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">69 dec 2023</div>
             </div>
-            <div class="work-small">
-                <div class="work-image">
+            <div class="project-small">
+                <a class="project-image" href="#" target="_blank">
                     <img src="/src/images/photo.avif" alt="image of project x">
-                </div>
-                <div class="work-title">title goes here</div>
-                <div class="work-description">
-                    work description goes here,
-                    work description goes here,
-                    work description goes.
-                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
-                </div>
-                <div class="date">69 dec 2023</div>
-            </div>
-            <div class="work-small">
-                <div class="work-image">
-                    <img src="/src/images/photo.avif" alt="image of project x">
-                </div>
-                <div class="work-title">title goes here</div>
-                <div class="work-description">
-                    work description goes here,
-                    work description goes here,
-                    work description goes.
-                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
-                </div>
-                <div class="date">69 dec 2023</div>
-            </div>
-            <div class="work-small">
-                <div class="work-image">
-                    <img src="/src/images/photo.avif" alt="image of project x">
-                </div>
-                <div class="work-title">gallery</div>
-                <div class="work-description">
-                    work description goes here,
-                    work description goes here,
-                    work description goes.
+                </a>
+                <div class="project-title">gallery</div>
+                <div class="project-description">
+                    
                     <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">69 dec 2023</div>
@@ -255,40 +235,43 @@
         <div id="contacts-title">contacts</div>
         <div id="contacts-description">You can reach me through these:</div>
         <div id="contacts-collection">
-            <a class="contact" href="#" target="_blank">
+            <a class="contact" href="mailto:zeghdns@gmail.com" target="_blank">
                 <span>.</span> Email
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="#" target="_blank">
+            <a class="contact" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
                 <span>.</span> Instagram
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="#" target="_blank">
-                <span>.</span> FaceBook
+            <a class="contact" href="https://www.facebook.com/salah.zeghdani.35/" target="_blank">
+                <span>.</span> Facebook
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="#" target="_blank">
+            <a class="contact" href="https://discord.com/users/891724893547290725" target="_blank">
                 <span>.</span> Discord
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="#" target="_blank">
+            <a class="contact" href="https://www.linkedin.com/in/salah-eddine-zeghdani-191371297/" target="_blank">
                 <span>.</span> linkedn
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="#" target="_blank">
+            <a class="contact" href="https://github.com/9EED" target="_blank">
                 <span>.</span> Github
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="#" target="_blank">
+            <a class="contact" href="https://t.me/NINEED9" target="_blank">
                 <span>.</span> Telegram
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="#" target="_blank">
-                <span>.</span> Github
+            <a class="contact" href="https://www.fiverr.com/" target="_blank">
+                <span>.</span> Fiverr
                 <img src="src/icons/link.svg">
             </a>
         </div>
     </div>
-    <div id="footer"></div>
+    <div id="footer">
+        <div>made by me <a href="https://9EED.github.io" target="_blank">9EED</a></div>
+        <div>icons from <a href="https://lucide.dev/" target="_blank">lucide.dev</a></div>
+    </div>
 </body>
 </html>
