--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </div>
             <hr>
             <div id="landing-contacts">
-                <a href="#">instagram</a>,
-                <a href="#">linkedin</a>,
-                <a href="#">discord</a>,
-                <a href="#">github</a>...
+                <a href="https://www.instagram.com/salah.zeghdani/">instagram</a>,
+                <a href="https://t.me/nineed">telegram</a>,
+                <a href="https://discord.com/users/891724893547290725">discord</a>,
+                <a href="https://github.com/9EED">github</a>...
             </div>
             <a id="landing-more-contacts" href="#">all contacts</a>
         </div>
@@ -42,7 +42,7 @@
             <div id="landing-paragraph">
                 &nbsp&nbsp State engineer of computer science and information technology in the making at the university of science and technology houari boumediene <a href="https://www.usthb.dz/" target="_blank"> usthb </a>.
             </div>
-            <a id="landing-learn-more">learn more</a>
+            <a id="landing-learn-more" href="#cards-page">learn more</a>
         </div>
         <a id="landing-scroller" href="#cards-page">scroll down</a>
     </div>
@@ -224,7 +224,7 @@
                 </a>
                 <div class="project-title">gallery</div>
                 <div class="project-description">
-                    
+
                     <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">69 dec 2023</div>
