mobile version started

--- a/index.html
+++ b/index.html
@@ -37,14 +37,24 @@
         <div id="landing-right">
             <div id="landing-introduction">introduction</div>
             <div id="landing-paragraph-title">
-                computer science <span>&&</span> softweare development<span>:</span>
+                computer science <span>&&</span> software development<span>:</span>
             </div>
             <div id="landing-paragraph">
                 &nbsp&nbsp State engineer of computer science and information technology in the making at the university of science and technology houari boumediene <a href="https://www.usthb.dz/" target="_blank"> usthb </a>.
             </div>
             <a id="landing-learn-more" href="#cards-page">learn more</a>
         </div>
-        <a id="landing-scroller" href="#cards-page">scroll down</a>
+        <div id="landing-mobile">
+            <div id="landing-name">
+                Zeghdani<span>.</span><br>
+                salah<span>_</span>eddine<span>.</span>
+            </div>
+            <hr>
+            <div id="landing-paragraph">
+                &nbsp&nbsp State <span>engineer</span> of computer science and information technology in the making at <a href="https://www.usthb.dz/" target="_blank"> the university of science and technology houari boumediene</a><span>.</span> Web <span>&&</span> software developer <a href="https://www.fiverr.com/nineed" target="_blank"> freelancer</a><span>.</span>
+            </div>
+        </div>
+        <div id="landing-scroller">scroll down</div>
     </div>
     <div id="cards-page">
         <div class="cards-title">hobbies</div>
@@ -54,8 +64,7 @@
                 <img src="/src/icons/internet.svg" class="card-image" alt="web dev icon" />
                 <div class="card-title">web development</div>
                 <div class="card-description">
-                    developing sites such<br>
-                    as this one for the web <br>
+                    developing sites such as this one for the web
                     using HTML CSS && JavaScript.
                 </div>
             </div>
@@ -63,8 +72,8 @@
                 <img src="/src/icons/app-window.svg" class="card-image" alt="application window icon" />
                 <div class="card-title">software development</div>
                 <div class="card-description">
-                    creating applications and games <br>
-                    mostly from scratch<br>
+                    creating applications and games
+                    mostly from scratch
                     using C && Python.
                 </div>
             </div>
@@ -72,8 +81,8 @@
                 <img src="/src/icons/lamp.svg" class="card-image" alt="lamp icon" />
                 <div class="card-title">studying</div>
                 <div class="card-description">
-                    I'm still a student so I have to!<br>
-                    altough I really enjoy studying <br> Mathemathics and casually learning <br>
+                    I'm still a student so I have to
+                    altough I really enjoy studying Mathemathics and casually learning
                     new things.
                 </div>
             </div>
@@ -81,8 +90,8 @@
                 <img src="/src/icons/dumbbell.svg" class="card-image" alt="dumbell icon" />
                 <div class="card-title">exercise</div>
                 <div class="card-description"> 
-                    I consistently exercise mostly<br>
-                    for health reasons, but also<br>
+                    I consistently exercise mostly
+                    for health reasons, but also
                     because it's fun!
                 </div>
             </div>
@@ -94,9 +103,9 @@
                 <img src="/src/icons/web-dev.svg" class="card-image" alt="image of web-dev" />
                 <div class="card-title">HTML && CSS && JS</div>
                 <div class="card-description">
-                    the vanilla taste of website<br>
-                    development, you can never<br>
-                    underestimate the power of<br>
+                    the vanilla taste of website
+                    development, you can never
+                    underestimate the power of
                     the basics.
                 </div>
             </div>
@@ -104,8 +113,8 @@
                 <img src="/src/icons/pyramid.svg" class="card-image" alt="Python logo" />
                 <div class="card-title">Python</div>
                 <div class="card-description">
-                    simple, quick and easy<br>
-                    Python allows me to create demos<br>
+                    simple, quick and easy
+                    Python allows me to create demos
                     or even full apps in record times.
                 </div>
             </div>
@@ -113,8 +122,8 @@
                 <img src="/src/icons/C.png" class="card-image" alt="C logo" />
                 <div class="card-title">C / C++</div>
                 <div class="card-description">
-                    mother of programming languages<br>
-                    I had to learn them for school and<br>
+                    mother of programming language
+                    I had to learn them for school and
                     fell in love with the efficency.
                 </div>
             </div>
@@ -122,8 +131,8 @@
                 <img src="/src/icons/terminal.svg" class="card-image" alt="terminal icon" />
                 <div class="card-title">Node.js / Express.js</div>
                 <div class="card-description">
-                    reliable back end framework<br>
-                    suitable for most web apps.<br>
+                    reliable back end framework
+                    suitable for most web apps
                     and server applications.
                 </div>
             </div>
@@ -131,9 +140,8 @@
                 <img src="/src/icons/raylib.png" class="card-image" alt="raylib icon" />
                 <div class="card-title">raylib</div>
                 <div class="card-description">
-                    with so many ports this simple <br>
-                    game making framework allows <br>
-                    me to create games in Python && C.
+                    with so many ports, this simple game making
+                    framework allows me to create games in Python && C.
                 </div>
             </div>
         </div>
@@ -144,14 +152,14 @@
                 <img src="/src/icons/freecodecamp.png" class="card-image" alt="image of card x" />
                 <div class="card-title">responsive web design</div>
                 <div class="card-description">
-                    300 hours of course work <br> at <a href="http://freeCodeCamp.org" target="_blank">freeCodeCamp.org</a> online <br> platform, on HTML && CSS.
+                    300 hours of course work at <a href="http://freeCodeCamp.org" target="_blank">freeCodeCamp.org</a> online platform, on HTML && CSS.
                 </div>
             </div>
             <div class="card">
                 <img src="/src/icons/freecodecamp.png" class="card-image" alt="image of card x" />
                 <div class="card-title">JavaScript Algorithms and Data Structures</div>
                 <div class="card-description">
-                    300 hours of course work <br> at <a href="http://freeCodeCamp.org" target="_blank">freeCodeCamp.org</a> online <br> platform, on JavaScript.
+                    300 hours of course work at <a href="http://freeCodeCamp.org" target="_blank">freeCodeCamp.org</a> online platform, on JavaScript.
                 </div>
             </div>
             <div class="card">
@@ -180,7 +188,7 @@
                 </a>
                 <div class="project-title">superbox 3.5</div>
                 <div class="project-description">
-                    &nbsp; This is a fully functional pixelsim game I made completly from scratch in Python and raylib. It is the third iteration of the superbox series. The game is essentially a sandbox where you can create and destroy pixels of deffirent materials that interact with each other, in many ways such as burning, melting, freezing, exploding. the 3.5 version of the game is the first to feature a UI and a save system in addition to an "endless" world.
+                    &nbsp; This is a fully functional pixelsim game I made completly from scratch in Python && raylib. It is the third iteration of the superbox series. The game is essentially a sandbox where you can create and destroy pixels of deffirent materials that interact with each other, in many ways such as burning, melting, freezing, exploding. the 3.5 version of the game is the first to feature a UI and a save system in addition to an "endless" world.
                     <a href="https://github.com/9EED/superbox-3.5" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">Oct-Nov 2022</div>
@@ -191,7 +199,7 @@
                 </a>
                 <div class="project-title">practice life</div>
                 <div class="project-description">
-                    &nbsp; This is a particle simulation I completly from scratch in JavaScript. It is a simulation of a simple ruleset between coloured particles that allow complex patterns to emerge in life like fashion. The simulation settings are tuneable through a UI made with HTML and CSS.
+                    &nbsp; This is a particle simulation I completly from scratch in JavaScript. It is a simulation of a simple ruleset that dictates the interactions between coloured particles that allow complex patterns to emerge through life like fashion. The simulation settings are tuneable through a UI made with HTML && CSS.
                     <a href="https://9eed.github.io/particle-life-js/" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">Jan-Mar 2023</div>
@@ -233,7 +241,7 @@
     </div>
     <div id="contacts-page">
         <div id="contacts-title">contacts</div>
-        <div id="contacts-description">You can reach me through these:</div>
+        <div id="contacts-description">don't hesitate to reach me through any of the following services:</div>
         <div id="contacts-collection">
             <a class="contact" href="mailto:zeghdns@gmail.com" target="_blank">
                 <span>.</span> Email
