--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <nav id="nav-bar">
         <a class="nav-item" href="./index.html" id="home-nav">
-            <img src="./src/icons/home.svg" alt="home button">
+            <img src="./src/icons/home.svg" alt="home button"> 
         </a>
         <a class="nav-item" href="#">landing</a>
-        <a class="nav-item" href="#">about-me</a>
-        <a class="nav-item" href="#">gallery</a>
-        <a class="nav-item" href="#">contacts</a>
+        <a class="nav-item" href="#cards-page">about-me</a>
+        <a class="nav-item" href="#latest-projects">gallery</a>
+        <a class="nav-item" href="#contacts-page">contacts</a>
     </nav>
     <div id="landing">
         <img src="./src/images/cut-out.png" alt="a cut-out picture of me" id="cut-out"/>
@@ -27,12 +27,12 @@
             </div>
             <hr>
             <div id="landing-contacts">
-                <a href="https://www.instagram.com/salah.zeghdani/">instagram</a>,
-                <a href="https://t.me/nineed">telegram</a>,
-                <a href="https://discord.com/users/891724893547290725">discord</a>,
-                <a href="https://github.com/9EED">github</a>...
+                <a href="https://www.instagram.com/salah.zeghdani/" target="_blank">instagram</a>,
+                <a href="https://t.me/nineed" target="_blank">telegram</a>,
+                <a href="https://discord.com/users/891724893547290725" target="_blank">discord</a>,
+                <a href="https://github.com/9EED" target="_blank">github</a>...
             </div>
-            <a id="landing-more-contacts" href="#">all contacts</a>
+            <a id="landing-more-contacts" href="#contacts-page">all contacts</a>
         </div>
         <div id="landing-right">
             <div id="landing-introduction">introduction</div>
@@ -205,37 +205,37 @@
                 <div class="date">Jan-Mar 2023</div>
             </div>
             <div class="project-small">
-                <a class="project-image" href="#" target="_blank">
-                    <img src="/src/images/photo.avif" alt="image of project x">
+                <a class="project-image" href="https://github.com/9EED/2D-gravity" target="_blank">
+                    <img src="/src/images/projects/2D gravity.png" alt="image of project x">
                 </a>
-                <div class="project-title">title goes here</div>
+                <div class="project-title">2D Gravity simulator</div>
                 <div class="project-description">
-                    
-                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    this is a 2D simulation of gravity I made in Python && raylib. In this simulation you can place and delete coloured balls that attract each other, form orbits and complex systems
+                    <a href="https://github.com/9EED/2D-gravity" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                </div>
+                <div class="date">Aug 2022</div>
+            </div>
+            <div class="project-small">
+                <a class="project-image" href="https://9eed.github.io/super-box/" target="_blank">
+                    <img src="/src/images/projects/super-box.png" alt="image of project x">
+                </a>
+                <div class="project-title">super-box</div>
+                <div class="project-description">
+                    first edition in the superbox series, a sandbox cellular automata game that allows you to place and destroy different types of cells that interact in complex ways
+                    <a href="https://9eed.github.io/super-box/" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">69 dec 2023</div>
             </div>
             <div class="project-small">
-                <a class="project-image" href="#" target="_blank">
-                    <img src="/src/images/photo.avif" alt="image of project x">
-                </a>
-                <div class="project-title">title goes here</div>
-                <div class="project-description">
-
-                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
-                </div>
-                <div class="date">69 dec 2023</div>
-            </div>
-            <div class="project-small">
-                <a class="project-image" href="#" target="_blank">
-                    <img src="/src/images/photo.avif" alt="image of project x">
+                <a class="project-image" href="https://9eed.github.io/projects/" target="_blank">
+                    <img src="/src/images/projects/gallery.png" alt="image of project x">
                 </a>
                 <div class="project-title">gallery</div>
                 <div class="project-description">
-
-                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    I have a whole lot more projects, neatly put together in this gallery 
+                    <a href="https://9EED.github.io/projects" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
-                <div class="date">69 dec 2023</div>
+                <div class="date">2021 - ongoing</div>
             </div>
         </div>
     </div>
