favicon and meta

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="./src/style.css">
-    <script src="./src/script.js" defer></script>
     <title>9EED's website</title>
+	<meta charset="UTF-8" />
+	<meta name="author" content="9EED" />
+	<meta name="description" content="9EED's professional personal website">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="./src/icons/9.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <script src="./src/script.js" defer></script>
 </head>
 <body>
     <nav id="nav-bar">
