image alts and project text alignments

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
             <div class="project-large">
                 <a class="project-image" href="https://9eed.github.io/particle-life-js/" target="_blank">
-                    <img src="/src/images/projects/particle life.png" alt="image of project x">
+                    <img src="/src/images/projects/particle life.png" alt="particles in my simulator">
                 </a>
                 <div class="project-title">practice life</div>
                 <div class="project-description">
@@ -209,7 +209,7 @@
             </div>
             <div class="project-small">
                 <a class="project-image" href="https://github.com/9EED/2D-gravity" target="_blank">
-                    <img src="/src/images/projects/2D gravity.png" alt="image of project x">
+                    <img src="/src/images/projects/2D gravity.png" alt="planets and stars in my simulator">
                 </a>
                 <div class="project-title">2D Gravity simulator</div>
                 <div class="project-description">
@@ -220,7 +220,7 @@
             </div>
             <div class="project-small">
                 <a class="project-image" href="https://9eed.github.io/super-box/" target="_blank">
-                    <img src="/src/images/projects/super-box.png" alt="image of project x">
+                    <img src="/src/images/projects/super-box.png" alt="a tree made in super-box">
                 </a>
                 <div class="project-title">super-box</div>
                 <div class="project-description">
