--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
                 <div class="date">Oct-Nov 2022</div>
             </div>
             <div class="project-large">
-                <a class="project-image" href="https://9eed.github.io/particle-life-js/" target="_blank">
-                    <img src="/src/images/projects/particle life.png" alt="particles in my simulator">
+                <a class="project-image" href="https://9eed.github.io/platformer" target="_blank">
+                    <img src="/src/images/projects/platformer.png" alt="a platforming game">
                 </a>
-                <div class="project-title">practice life</div>
+                <div class="project-title">platformer</div>
                 <div class="project-description">
-                    &nbsp; This is a particle simulation I completly from scratch in JavaScript. It is a simulation of a simple ruleset that dictates the interactions between coloured particles that allow complex patterns to emerge through life like fashion. The simulation settings are tuneable through a UI made with HTML && CSS.
-                    <a href="https://9eed.github.io/particle-life-js/" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    &nbsp; my platforming game made in JavaScript using Matter.js, it does feature very smooth gameplay and a complete map that allowed for the fast growth of a competitive community. made in 24 hours for <a href="https://agc.microclub.tech/" target="_blank">AGC<img src="/src/icons/link.svg"/></a> coding challenges
+                    <a href="https://9eed.github.io/platformer" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">Jan-Mar 2023</div>
             </div>
@@ -219,15 +219,15 @@
                 <div class="date">Aug 2022</div>
             </div>
             <div class="project-small">
-                <a class="project-image" href="https://9eed.github.io/super-box/" target="_blank">
-                    <img src="/src/images/projects/super-box.png" alt="a tree made in super-box">
+                <a class="project-image" href="https://9eed.github.io/particle-life-js/" target="_blank">
+                    <img src="/src/images/projects/particle life.png" alt="particle in my simulator">
                 </a>
-                <div class="project-title">super-box</div>
+                <div class="project-title">particle life</div>
                 <div class="project-description">
-                    first edition in the superbox series, a sandbox cellular automata game that allows you to place and destroy different types of cells that interact in complex ways
-                    <a href="https://9eed.github.io/super-box/" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    This is a particle simulation I completly from scratch in JavaScript. It is a simulation of a simple ruleset that dictates the interactions between coloured particles that allow complex patterns to emerge through life like fashion. The simulation settings are tuneable through a UI made with HTML && CSS.
+                    <a href="https://9eed.github.io/particle-life-js/" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
-                <div class="date">69 dec 2023</div>
+                <div class="date">Jan-Mar 2023</div>
             </div>
             <div class="project-small">
                 <a class="project-image" href="https://9eed.github.io/projects/" target="_blank">
