--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="author" content="9EED" />
 	<meta name="description" content="9EED's professional personal website">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
 	<link rel="shortcut icon" href="./src/icons/9.png" type="image/x-icon">
     <link rel="stylesheet" href="./src/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -149,7 +149,7 @@
             </div>
         </div>
         <div class="cards-title">certificates</div>
-        <div class="card-collection-description">some of the certificates and awards i have accumilated over the years.</div>
+        <div class="card-collection-description">some of the certificates and awards i have accumulated over the years.</div>
         <div class="cards-collection">
             <div class="card">
                 <img src="/src/icons/freecodecamp.png" class="card-image" alt="image of card x" />
