--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 &nbsp&nbsp State <span>engineer</span> of computer science and information technology in the making at <a href="https://www.usthb.dz/" target="_blank"> the university of science and technology houari boumediene</a><span>.</span> Web <span>&&</span> software developer <a href="https://www.fiverr.com/nineed" target="_blank"> freelancer</a><span>.</span>
             </div>
         </div>
-        <div id="landing-scroller">scroll down</div>
+        <a href="#cards-page" id="landing-scroller">scroll down</a>
     </div>
     <div id="cards-page">
         <div class="cards-title">hobbies</div>
