--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>9EED's website</title>
+    <title>Zeghdani Salah | Software Engineering</title>
 	<meta charset="UTF-8" />
-	<meta name="author" content="9EED" />
-	<meta name="description" content="9EED's professional personal website">
+	<meta name="author" content="HEXXT" />
+	<meta name="description" content="Zeghdani Salah's personal website">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
-	<link rel="shortcut icon" href="./src/icons/9.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./src/icons/web-dev-plus.svg" type="image/x-icon">
     <link rel="stylesheet" href="./src/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="./src/script.js" defer></script>
@@ -30,10 +30,9 @@
             </div>
             <hr>
             <div id="landing-contacts">
-                <a href="https://www.instagram.com/salah.zeghdani/" target="_blank">instagram</a>,
-                <a href="https://t.me/nineed" target="_blank">telegram</a>,
-                <a href="https://discord.com/users/891724893547290725" target="_blank">discord</a>,
-                <a href="https://github.com/9EED" target="_blank">github</a>...
+                <a href="https://www.linkedin.com/in/zeghdani" target="_blank">linkedin</a>,
+                <a href="https://t.me/HEXXT0" target="_blank">telegram</a>,
+                <a href="https://github.com/hexxt-git" target="_blank">github</a>...
             </div>
             <a id="landing-more-contacts" href="#contacts-page">all contacts</a>
         </div>
@@ -43,7 +42,7 @@
                 computer science <span>&&</span> software development<span>:</span>
             </div>
             <div id="landing-paragraph">
-                &nbsp&nbsp State engineer of computer science and information technology in the making at the university of science and technology houari boumediene <a href="https://www.usthb.dz/" target="_blank"> usthb </a>.
+                &nbsp&nbsp Engineer of computer science and information technology in the making at the university of science and technology houari boumediene <a href="https://www.usthb.dz/" target="_blank"> usthb </a>.
             </div>
             <a id="landing-learn-more" href="#cards-page">learn more</a>
         </div>
@@ -67,8 +66,8 @@
                 <img src="/src/icons/internet.svg" class="card-image" alt="web dev icon" />
                 <div class="card-title">web development</div>
                 <div class="card-description">
-                    developing sites such as this one for the web
-                    using HTML CSS && JavaScript.
+                    developing sites such as this one for the web.
+                    covering both front and backend 
                 </div>
             </div>
             <div class="card">
@@ -104,7 +103,7 @@
         <div class="cards-collection">
             <div class="card">
                 <img src="/src/icons/web-dev.svg" class="card-image" alt="image of web-dev" />
-                <div class="card-title">HTML && CSS && JS</div>
+                <div class="card-title">HTML && CSS && Javascript</div>
                 <div class="card-description">
                     the vanilla taste of website
                     development, you can never
@@ -113,21 +112,20 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/src/icons/pyramid.svg" class="card-image" alt="Python logo" />
-                <div class="card-title">Python</div>
+                <img src="/src/icons/web-dev-plus.svg" class="card-image" alt="image of web-dev" />
+                <div class="card-title">TailwindCSS && Typescript</div>
                 <div class="card-description">
-                    simple, quick and easy
-                    Python allows me to create demos
-                    or even full apps in record times.
+                    These tools along with many others
+                    enhance the development experience
+                    allowing for much better results
                 </div>
             </div>
             <div class="card">
-                <img src="/src/icons/C.png" class="card-image" alt="C logo" />
-                <div class="card-title">C / C++</div>
+                <img src="/src/icons/pyramid.svg" class="card-image" alt="logo for svelte" />
+                <div class="card-title">Svelte && Sveltekit</div>
                 <div class="card-description">
-                    mother of programming language
-                    I had to learn them for school and
-                    fell in love with the efficency.
+                    simple, fast and scalable web framework.
+                    i use it for most my projects
                 </div>
             </div>
             <div class="card">
@@ -137,6 +135,7 @@
                     reliable back end framework
                     suitable for most web apps
                     and server applications.
+                    i also use sql, socketio for the backend
                 </div>
             </div>
             <div class="card">
@@ -167,16 +166,50 @@
             </div>
             <div class="card">
                 <img src="/src/icons/codingame.png" class="card-image" alt="codingame logo" />
-                <div class="card-title"> Python 3 certification </div>
+                <div class="card-title"> Python 3 <br /> certification </div>
                 <div class="card-description">
-                    passed the <a href="https://www.codingame.com">codingame.com</a> Python 3 certification test. with a score of 80%.
+                    passed the <a href="https://www.codingame.com">codingame.com</a> Python 3 certification test. with a score of 100%.
                 </div>
             </div>
             <div class="card">
                 <img src="/src/icons/codingame.png" class="card-image" alt="codingame logo" />
                 <div class="card-title">JavaScript Certification</div>
                 <div class="card-description">
-                    passed the <a href="https://www.codingame.com">codingame.com</a> JavaScript certification test. with a 100% score and honors.
+                    passed the <a href="https://www.codingame.com">codingame.com</a> JavaScript certification test. with a 100% score.
+                </div>
+            </div>
+        </div>
+        <div class="cards-title">hackathons</div>
+        <div class="card-collection-description">competitive experiences i have had.</div>
+        <div class="cards-collection">
+            <div class="card">
+                <img src="/src/icons/MC.webp" class="card-image" alt="image of card x" style="transform: scaleY(0.8);" />
+                <div class="card-title">microhack 2.0</div>
+                <div class="card-description">
+                    organized by microclub in 2024. it was a development competition. we developed our own file management <a href="https://github.com/hexxt-git/docsoft" target="_blank">platform</a> 
+                </div>
+            </div>
+            <div class="card">
+                <img src="/src/icons/ncs.png" class="card-image" alt="image of card x" />
+                <div class="card-title">NCS Hack</div>
+                <div class="card-description">
+                    We developed a health care assistant 
+                    <a href="https://github.com/wailbentafat/CROHN" target="_blank">platform</a>
+                    for crohn patients. and we won the second place.
+                </div>
+            </div>
+            <div class="card">
+                <img src="/src/icons/squid-tech.png" class="card-image" alt="codingame logo" />
+                <div class="card-title"> SquidTech </div>
+                <div class="card-description">
+                    We got to develop a social media <a href="https://ecosphere.celec.club/" target="_blank">platform</a> during one week and that got us the prize for one of the categories.
+                </div>
+            </div>
+            <div class="card">
+                <img src="/src/icons/greenhat.png" class="card-image" alt="codingame logo" style="scale: 0.85;" />
+                <div class="card-title">Greenhat CTF</div>
+                <div class="card-description">
+                    We won this cyber security competition first place and i personally was third in points.
                 </div>
             </div>
         </div>
@@ -186,57 +219,58 @@
         <div id="latest-projects-description">The latest Projects I have worked on.</div>
         <div id="latest-projects-collection">
             <div class="project-large">
-                <a class="project-image" href="https://github.com/9EED/superbox-3.5" target="_blank">
-                    <img src="/src/images/projects/superbox 3.5.png" alt="image of a sky island in superbox-3.5">
+                <a class="project-image" href="https://github.com/hexxt-git/ecosphere-interface" target="_blank">
+                    <img src="/src/images/projects/ecosphere.png" alt="image of a sky island in superbox-3.5">
                 </a>
-                <div class="project-title">superbox 3.5</div>
+                <div class="project-title">Ecosphere</div>
                 <div class="project-description">
-                    &nbsp; This is a fully functional pixelsim game I made completly from scratch in Python && raylib. It is the third iteration of the superbox series. The game is essentially a sandbox where you can create and destroy pixels of deffirent materials that interact with each other, in many ways such as burning, melting, freezing, exploding. the 3.5 version of the game is the first to feature a UI and a save system in addition to an "endless" world.
-                    <a href="https://github.com/9EED/superbox-3.5" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    &nbsp; An ecology oriented social media platform i developed the frontend interface of during the squid-tech hackathon 2024. it won us the most innovative team prize. and you can
+                    <a href="https://ecosphere-interface.vercel.app" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    it here.
                 </div>
-                <div class="date">Oct-Nov 2022</div>
+                <div class="date">Jul 2024</div>
             </div>
             <div class="project-large">
-                <a class="project-image" href="https://9eed.github.io/platformer" target="_blank">
+                <a class="project-image" href="https://hexxt-git.github.io/platformer" target="_blank">
                     <img src="/src/images/projects/platformer.png" alt="a platforming game">
                 </a>
                 <div class="project-title">platformer</div>
                 <div class="project-description">
                     &nbsp; my platforming game made in JavaScript using Matter.js, it does feature very smooth gameplay and a complete map that allowed for the fast growth of a competitive community. made in 24 hours for <a href="https://agc.microclub.tech/" target="_blank">AGC<img src="/src/icons/link.svg"/></a> coding challenges
-                    <a href="https://9eed.github.io/platformer" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    <a href="https://hexxt-git.github.io/platformer" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">Jan-Mar 2023</div>
             </div>
             <div class="project-small">
-                <a class="project-image" href="https://github.com/9EED/2D-gravity" target="_blank">
+                <a class="project-image" href="https://github.com/hexxt-git/2D-gravity" target="_blank">
                     <img src="/src/images/projects/2D gravity.png" alt="planets and stars in my simulator">
                 </a>
                 <div class="project-title">2D Gravity simulator</div>
                 <div class="project-description">
                     this is a 2D simulation of gravity I made in Python && raylib. In this simulation you can place and delete coloured balls that attract each other, form orbits and complex systems
-                    <a href="https://github.com/9EED/2D-gravity" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    <a href="https://github.com/hexxt-git/2D-gravity" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">Aug 2022</div>
             </div>
             <div class="project-small">
-                <a class="project-image" href="https://9eed.github.io/particle-life-js/" target="_blank">
+                <a class="project-image" href="https://hexxt-git.github.io/particle-life-js/" target="_blank">
                     <img src="/src/images/projects/particle life.png" alt="particle in my simulator">
                 </a>
                 <div class="project-title">particle life</div>
                 <div class="project-description">
                     This is a particle simulation I completly from scratch in JavaScript. It is a simulation of a simple ruleset that dictates the interactions between coloured particles that allow complex patterns to emerge through life like fashion. The simulation settings are tuneable through a UI made with HTML && CSS.
-                    <a href="https://9eed.github.io/particle-life-js/" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    <a href="https://hexxt-git.github.io/particle-life-js/" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">Jan-Mar 2023</div>
             </div>
             <div class="project-small">
-                <a class="project-image" href="https://9eed.github.io/projects/" target="_blank">
+                <a class="project-image" href="https://github.com/hexxt-git" target="_blank">
                     <img src="/src/images/projects/gallery.png" alt="image of project x">
                 </a>
-                <div class="project-title">gallery</div>
+                <div class="project-title">More</div>
                 <div class="project-description">
                     I have a whole lot more projects, neatly put together in this gallery 
-                    <a href="https://9EED.github.io/projects" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                    <a href="https://github.com/hexxt-git" target="_blank">visit <img src="/src/icons/link.svg" /></a>
                 </div>
                 <div class="date">2021 - ongoing</div>
             </div>
@@ -262,15 +296,15 @@
                 <span>.</span> Discord
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="https://www.linkedin.com/in/salah-eddine-zeghdani-191371297/" target="_blank">
+            <a class="contact" href="https://www.linkedin.com/in/zeghdani" target="_blank">
                 <span>.</span> linkedn
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="https://github.com/9EED" target="_blank">
+            <a class="contact" href="https://github.com/hexxt-git" target="_blank">
                 <span>.</span> Github
                 <img src="src/icons/link.svg">
             </a>
-            <a class="contact" href="https://t.me/NINEED9" target="_blank">
+            <a class="contact" href="https://t.me/HEXXT0" target="_blank">
                 <span>.</span> Telegram
                 <img src="src/icons/link.svg">
             </a>
@@ -281,8 +315,10 @@
         </div>
     </div>
     <div id="footer">
-        <div>made by me <a href="https://9EED.github.io" target="_blank">9EED</a></div>
-        <div>icons from <a href="https://lucide.dev/" target="_blank">lucide.dev</a></div>
+        <div>made by me <a href="https://hexxt-git.github.io" target="_blank">hexxt-git</a></div>
+        <div>icons by <a href="https://lucide.dev/" target="_blank">lucide.dev</a></div>
+        <div>this website is quite outdated</div>
+        <div>visit my socials for the latest stuff</div>
     </div>
 </body>
 </html>
